# plugin-sdk

./: CMakeLists.txt
injector/: injector.hpp
plugin_III/: CMakeLists.txt
plugin_III/game_III/rw/: rwplcore.h
plugin_sa/: CMakeLists.txt
plugin_sa/game_sa/: CGamma.cpp  CGamma.h
plugin_sa/game_sa/rw/: rtdict.h
plugin_vc/: CMakeLists.txt
plugin_vc/game_vc/: CPedAttractor.h  CPedAttractorManager.h
plugin_vc/game_vc/rw/: rwplcore.h
shared/: EventList.h  Patch.h
shared/extensions/: Config.cpp  KeyCheck.cpp
shared/game/: CRGBA.cpp  CRGBA.h  CompressedVector.cpp  CompressedVector2D.cpp
